# llamacrew

./: .gitignore  README.md  YAML_JSON_SUPPORT.md  pyproject.toml
docs/: USER_GUIDE.md
examples/: blog_workflow.yaml  llama_stack_memory.py  run_yaml_workflow.py  simple_two_agent.py
llamacrew/: __init__.py
llamacrew/core/: agent.py  crew.py  message.py  task.py
llamacrew/llama_integration/: client_wrapper.py
llamacrew/memory/: checkpoint.py  scratchpad.py
llamacrew/memory/backends/: llama_stack_backend.py
llamacrew/orchestration/: engine.py
llamacrew/parser/: yaml_parser.py
llamacrew/utils/: retry.py
tests/: __init__.py
tests/integration/: test_llama_stack.py
tests/unit/: test_agent.py  test_crew.py  test_task.py
